--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-PROVIDER_URI=https://go.getblock.io/96c3bd453a3a446f8e1467ec7ae1b0f2
 PROVIDER_URI=https://cosmos-rpc.publicnode.com:443
-OUTPUT_DATABASE=mongodb://comosWriteEtl:cosmos_write_etl_yY83S7MJq_hPjjw2@34.126.84.83:27017,34.142.204.61:27017,34.142.219.60:27017
-INPUT_DATABASE=mongodb://comosWriteEtl:cosmos_write_etl_yY83S7MJq_hPjjw2@34.126.84.83:27017,34.142.204.61:27017,34.142.219.60:27017
+OUTPUT_DATABASE=mongodb://localhost:27017
+INPUT_DATABASE=mongodb://localhost:27017
