--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 PROVIDER_URI=https://cosmos-rpc.publicnode.com:443
-OUTPUT_DATABASE=mongodb://localhost:27017
-INPUT_DATABASE=mongodb://localhost:27017
+OUTPUT_DATABASE=mongodb://localhost:27017/
