add chain id constraint

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-PROVIDER_URI=https://cosmos-rpc.publicnode.com:443
+PROVIDER_URI=https://oraichain-rpc.publicnode.com:443
 OUTPUT_DATABASE=mongodb://localhost:27017/
